# variant_calling

./: .gitignore  .workflow-index.yml  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: apptainer.yml  main.yml  pypi.yml  sing.yml
doc/: conf.py  index.rst
sequana_pipelines/variant_calling/: __init__.py  config.yaml  main.py  multiqc_config.yaml  requirements.txt  schema.yaml  tools.txt  variant_calling.rules
singularity/: Singularity
test/: test_main.py
