[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sequana-variant-calling"
version = "1.4.0"
description = "A multi-sample variant calling pipeline"
authors = [{name="Sequana Team"}]
license = "BSD-3"
repository = "https://github.com/sequana/variant_calling"
readme = "README.rst"
keywords = ["snakemake", "NGS", "sequana", "bwa", "minimap2"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]


requires-python = ">=3.9,<4.0"
dependencies = [
    "sequana >=0.19.4",
    "sequana_pipetools >=1.3.0",
    "click-completion >=0.5.2",
    "pytest (>=8.3.4,<9.0.0)"
]

[tool.poetry]
packages = [
    {include = "sequana_pipelines"}
]

[project.scripts]
sequana_variant_calling = "sequana_pipelines.variant_calling.main:main"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = ">7.4.0"
mock = "^5.1.0"
pytest-mock = ">=3.11.1"
pytest-cov = ">=4.1.0"

